# chatGPT

./: README.md  new_resize.py  pyproject.toml  test.py
